# WEGH

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  baseline_scores.json  client.py  entrypoint.sh  inference.py  models.py  openenv.yaml  pyproject.toml  supervisord.conf  validate-submission.sh  wegh_graders.py
.github/workflows/: sync_to_hf_space.yml
dashboard/: __init__.py  server.py
dashboard/static/: index.html
docs/: high_level_overview.md  technical_deep_dive.md
engine/: go.mod
engine/api/: handlers.go  models.go
engine/cmd/server/: main.go
engine/internal/cache/: cache.go  cache_test.go  hierarchy.go  stats.go
engine/internal/episodes/: manager.go
engine/internal/graph/: dag.go  templates.go
engine/internal/pipeline/: hazards.go  instruction.go  pipeline.go  pipeline_test.go  trace.go
engine/internal/simulator/: simulator.go
server/: __init__.py  app.py  go_client.py  requirements.txt  reward.py  task_configs.py  wegh_env.py
tests/: phase2_evaluator_sim.py
